# daumen

./: .gitignore  CMakeLists.txt  license.md
inc/daumen/: all.h  bitmap.h  core.h  export.h  nagel.h
src/daumen/: bitmap.cpp  core.cpp  export.cpp  nagel.cpp  windows-common-internal.cpp  windows-common-internal.h
src/daumen/win/: core.cpp
